--- a/netlify.toml
+++ b/netlify.toml
@@ -5,4 +5,10 @@
 [[redirects]]
   from = "/*"
   to = "/index.html"
-  status = 200 
+  status = 200
+
+[[redirects]]
+  from = "/*"
+  to = "https://sono.wtf/:splat"
+  status = 301
+  force = true
