--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
     "@vitejs/plugin-vue": "^4.3.4",
-    "vite": "^4.4.9"
+    "aos": "^2.3.4",
+    "vite": "^4.4.9",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.3.4",
     "sass": "^1.66.1"
   }
-} 
+}
