Major: Re-design Sono Website

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,45 @@
 services:
-  web:
-    container_name: sono-website
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: sono-backend
+    expose:
+      - "${BACKEND_PORT}"
+    environment:
+      - BACKEND_PORT=${BACKEND_PORT}
+      - SMTP_HOST=${SMTP_HOST}
+      - SMTP_PORT=${SMTP_PORT}
+      - SMTP_USERNAME=${SMTP_USERNAME}
+      - SMTP_PASSWORD=${SMTP_PASSWORD}
+      - SMTP_FROM=${SMTP_FROM}
+      - SMTP_TO=${SMTP_TO}
+    networks:
+      - sono-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "python -c \"import urllib.request; urllib.request.urlopen('http://localhost:${BACKEND_PORT}/health')\" || exit 1"]
+      interval: 30s
+      timeout: 60s
+      retries: 3
+      start_period: 10s
+
+  frontend:
     build:
       context: .
       dockerfile: Dockerfile
+    container_name: sono-frontend
     ports:
-      - "${PORT}:80"
-    restart: always
-    pull_policy: build
+      - "${FRONTEND_PORT}:80"
+    environment:
+      - BACKEND_PORT=${BACKEND_PORT}
+    depends_on:
+      backend:
+        condition: service_healthy
+    networks:
+      - sono-network
+    restart: unless-stopped
+
+networks:
+  sono-network:
+    driver: bridge
