--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,10 @@
-node_modules
-npm-debug.log
-dist
-.git
-.gitignore
-README.md
-.env
-.env.local
-.env.*.local
 backend
+node_modules
+.git
+.env
+.env.*
+dist
+*.log
+.DS_Store
+.vscode
+.idea
